increased sql logging, upgraded newInstance to java 9+, cosmetical field order change